<resources>
    <string name="app_name">sub rosa</string>
    <string name="nav_header_title">sub rosa by naiveHA</string>
    <string name="nav_header_subtitle">Convey passwords</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_mgmt">Device Configuration</string>
    <string name="menu_otp">YubiOTP</string>
    <string name="menu_piv">PIV</string>
    <string name="menu_web">WebView</string>
    <string name="menu_oath">OATH</string>
    <string name="menu_openpgp">OpenPGP</string>
    <string name="menu_licenses">Licenses</string>
    <string name="openpgp_header">OpenPGP Configuration</string>
    <string name="need_key_generic">Plug in your security key or tap over NFC</string>
    <string name="need_key">Plug in your security key or tap over NFC</string>
    <string name="insert_key">Insert Security Key</string>
    <string name="hold_key">Hold your device flat until operation is completed</string>
    <string name="remove_key">Remove your device now</string>
    <string name="app_missing">Application not available on this device</string>
    <string name="pin">PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet</string>
    <string name="save">Save</string>
    <string name="openpgp_btn_write">WRITE OPENPGP KEY</string>
    <string name="randomize">randomize</string>
    <string name="transport_usb">USB</string>
    <string name="transport_nfc">NFC</string>
    <string name="application_otp">OTP</string>
    <string name="application_u2f">FIDO U2F</string>
    <string name="application_piv">PIV</string>
    <string name="application_fido2">FIDO2</string>
    <string name="application_pgp">OpenPGP</string>
    <string name="application_oath">OATH</string>
    <string name="piv_enter_mgmt_key">Enter Management Key</string>
    <string name="piv_mgmt_key_hint">Management Key (hex)</string>
    <string name="piv_no_cert">No certificate loaded</string>
    <string name="piv_authentication">Authentication</string>
    <string name="piv_signature">Digital Signature</string>
    <string name="piv_key_mgmt">Key Management</string>
    <string name="piv_card_auth">Card Authentication</string>
    <string name="piv_delete">Delete</string>
    <string name="piv_attest">Attest</string>
    <string name="piv_generate_ec_cert">Generate EC256</string>
    <string name="piv_generate_rsa_cert">Generate RSA2048</string>
    <string name="piv_generate_ed25519_cert">Generate ED25519</string>
    <string name="piv_generate_x25519_cert">Generate X25519</string>
    <string name="piv_import_cert">Import</string>
    <string name="piv_message_hint">Message</string>
    <string name="piv_sign">Sign</string>
    <string name="piv_sign_desc">Sign a message with the private key</string>
    <string name="piv_certificate_desc">Certificate actions</string>
    <string name="piv_webview">WebView</string>
    <string name="mgmt_subtitle"> </string>
    <string name="otp_yubiotp">Yubico OTP</string>
    <string name="otp_yubistatic">Static Password</string>
    <string name="otp_yubistatic_desc">Program a Yubico static password.\nWARNING: Operation can NOT be undone!</string>
    <string name="otp_clipboard_paste">Paste from clipboard</string>
    <string name="otp_yubistatic_id">Type or paste from clipboard</string>
    <string name="otp_illegal_char_desc">Error: Illegal character for selected keyboard</string>
    <string name="otp_extras_desc">Extras</string>
    <string name="otp_extras_cr_desc">Append \'enter\'</string>
    <string name="opt_extras_tab1_desc">Prepend \'tab\'   </string>
    <string name="opt_extras_tab2_desc">Append \'tab\'    </string>
    <string name="opt_extras_none_desc">None</string>
    <string name="opt_keyboard_selection_desc">Keyboard selection</string>
    <string name="otp_keyboard_us_desc">US</string>
    <string name="otp_keyboard_uk_desc">UK</string>
    <string name="otp_keyboard_de_desc">DE</string>
    <string name="otp_keyboard_fr_desc">FR</string>
    <string name="otp_keyboard_it_desc">IT</string>
    <string name="otp_keyboard_modhex_desc">MODHEX</string>
    <string name="otp_yubistatic_slot_desc">Slot selection</string>
    <string name="otp_yubistatic_read">Read static password</string>
    <string name="otp_yubistatic_read_desc">Test the static password</string>
    <string name="otp_yubistatic_show_pwd_desc">Show password</string>
    <string name="otp_btn_write_static">WRITE STATIC PASSWORD</string>
    <string name="otp_chalresp">Challenge\nResponse</string>
    <string name="otp_public_id">Public ID (modhex)</string>
    <string name="otp_yubiotp_desc">Program a Yubico OTP.\nWARNING: Overwriting a slot can NOT be undone!</string>
    <string name="otp_private_id">Private ID (hex)</string>
    <string name="otp_aes_key">AES key (hex)</string>
    <string name="otp_hmac_key">HMAC-SHA1 key (hex)</string>
    <string name="otp_hmac_challenge">Challenge (hex)</string>
    <string name="otp_read_yubiotp">Read Yubico OTP</string>
    <string name="otp_read_yubiotp_desc">Read a Yubico OTP from a YubiKey over USB or NFC</string>
    <string name="otp_slot_1">Slot 1 (short press)</string>
    <string name="otp_slot_2">Slot 2 (long press)</string>
    <string name="otp_chalresp_desc">Program a challenge-response credential.\nWARNING: Overwriting a slot can NOT be undone!</string>
    <string name="otp_calculate_response">Calculate response</string>
    <string name="otp_chalresp_desc_2">Calculate a response from a slot</string>
    <string name="otp_require_touch">Require touch</string>
    <string name="otp_program">Program</string>
    <string name="otp_use">Use</string>
    <string name="oath_credentials">Credentials</string>
    <string name="oath_key">Secret (hex)</string>
    <string name="oath_issuer">Credential issuer</string>
    <string name="oath_add">Add new credential</string>
    <string name="about">About</string>
    <string name="about_app">"sub rosa" is an app built on top of YubiKit library provided by Yubico.\n\n
        sub rosa programs the static password and/or an OpenPGP key to a hardware security key.\n
        sub rosa fully supports YubiKey and only partially Nitrokey. Nitrokey does not support HID emulation and, as such, static passwords.\n\n
        More info about the allowed characters when programming the static password and how to import an OpenPGP key can be found at:\nhttps://github.com./naive-HA/subrosa\n\n\n
       Coffee tips go to:\n1HwgShr1TniuBxNQwy2xAhpQaNuZhtw6sh
    </string>
    <string name="yubico">Yubico</string>
    <string name="version">Version %s</string>
    <string name="copyright"> </string>
    <string name="copied_to_clipboard">BTC address copied to clipboard! </string>
    <string name="github_url">https://github.com/naive-HA/subrosa</string>
    <string name="footer_title_version">sub rosa by naiveHA %s</string>
    <string name="coffee_tips">Coffee tips go to:</string>
    <string name="btc_address">1HwgShr1TniuBxNQwy2xAhpQaNuZhtw6sh</string>
    <string name="copied_to_clipboard_msg">Copied to clipboard: %s</string>
    <string name="openpgp_desc">Program an OpenPGP private key.\nWARNING: Operation can NOT be undone!</string>
    <string name="openpgp_tap_to_paste">Tap to import from file\nLong tap to import from clipboard\nOr, import from OpenKeychain via \"Share backup\"</string>
    <string name="openpgp_admin_pin_title">Admin PIN</string>
    <string name="openpgp_admin_pin_message">Enter the YubiKey Admin PIN to program the key.\n\nDefault: 12345678</string>
    <string name="openpgp_admin_pin_hint">Admin PIN</string>
    <string name="openpgp_program">Program</string>
    <string name="enter_admin_pin">Enter Admin PIN</string>
    <string name="enter_key_passphrase">Protected OpenPGP key</string>
    <string name="enter_file_passphrase">Decrypt OpenPGP key backup</string>
    <string name="openpgp_key_user_id">User ID</string>
    <string name="openpgp_key_algorithm">Algorithm</string>
    <string name="openpgp_key_created">Created</string>
    <string name="openpgp_key_expires">Expires</string>
    <string name="openpgp_key_no_expiry">No expiry</string>
    <string name="openpgp_key_fingerprint">Fingerprint</string>
    <string name="openpgp_key_subkeys">Keys</string>
    <string name="openpgp_btn_read">READ OPENPGP CARD</string>
    <string name="openpgp_btn_reset">RESET OPENPGP CARD</string>
    <string name="openpgp_reset_title">Reset OpenPGP Application</string>
    <string name="openpgp_reset_message">This will permanently delete all keys, certificates, and data stored in the OpenPGP application.\n\nThis cannot be undone.</string>
    <string name="openpgp_reset_confirm">Reset</string>
    <string name="openpgp_reset_success">OpenPGP application reset successfully</string>
    <string name="openpgp_file_wrong_passphrase">Wrong file passphrase — please try again</string>
    <string name="openpgp_file_read_error">Could not read the file</string>
    <string name="openpgp_key_invalid">Clipboard does not contain an OpenPGP private key.</string>
    <string name="openpgp_no_key_loaded">No key loaded — paste a key first</string>
    <string name="openpgp_wrong_passphrase">Wrong passphrase — please try again</string>
    <string name="openpgp_key_prepare_failed">Failed to read key material</string>
    <string name="openpgp_admin_pin_too_short">Admin PIN must be at least 8 characters long</string>
    <string name="openpgp_user_pin_too_short">User PIN must be at least 6 characters long</string>
    <string name="openpgp_new_pin_mismatch">New PIN and confirmation do not match</string>
    <string name="openpgp_device_management">Device Management</string>
    <string name="openpgp_device_management_desc">OpenPGP PIN management</string>
    <string name="openpgp_pin_retries">User PIN retries: %1$d\nAdmin PIN retries: %2$d</string>
    <string name="openpgp_btn_change_admin_pin">Change Admin PIN</string>
    <string name="openpgp_btn_change_user_pin">Change User PIN</string>
    <string name="openpgp_btn_reset_user_pin">Reset Blocked User PIN</string>
    <string name="openpgp_import_file">Import .pgp File…</string>
    <string name="openpgp_subkey_meta">Created: %1$s | Expires: %2$s</string>
    <string name="openpgp_card_details_title">OpenPGP Card Details</string>
    <string name="yubikit_prompt_activity_title">Connect device</string>
    <string name="yubikit_otp_activity_title">Connect device</string>
    <string name="yubikit_prompt_plug_in">Connect your device.</string>
    <string name="yubikit_prompt_plug_in_or_tap">Hold your device flat against the back of your phone, or connect it via USB.</string>
    <string name="yubikit_prompt_remove">Remove your device.</string>
    <string name="yubikit_otp_touch">Touch the sensor on your device.</string>
    <string name="reset_yubikey_static_password">Reset YubiKey static password\nWARNING: Operation can NOT be undone!</string>
    <string name="reset_static_password">Reset Static Password</string>
    <string name="usage">Usage</string>
    <string name="dash">—</string>
    <string name="algorithm">Algorithm</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="meta_info">Meta info</string>
</resources>