<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_management">

    <fragment
        android:id="@+id/nav_management"
        android:name="acab.naiveha.subrosa.ui.management.ManagementFragment"
        android:label="@string/menu_mgmt"
        tools:layout="@layout/fragment_management" />

    <fragment
        android:id="@+id/nav_yubiotp"
        android:name="acab.naiveha.subrosa.ui.yubiotp.OtpFragment"
        android:label="@string/menu_otp"
        tools:layout="@layout/fragment_yubiotp" />

    <fragment
        android:id="@+id/nav_openpgp"
        android:name="acab.naiveha.subrosa.ui.openpgp.OpenPgpFragment"
        android:label="@string/menu_openpgp"
        tools:layout="@layout/fragment_openpgp" />

    <fragment
        android:id="@+id/nav_licenses"
        android:name="acab.naiveha.subrosa.ui.licenses.LicensesFragment"
        android:label="@string/menu_licenses"
        tools:layout="@layout/fragment_licenses" />

    <fragment
        android:id="@+id/nav_about"
        android:name="acab.naiveha.subrosa.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/passwordOcrFragment"
        android:name="acab.naiveha.subrosa.ui.openpgp.PasswordOcrFragment"
        android:label="Extract Password"
        tools:layout="@layout/fragment_password_ocr">
        <argument
            android:name="imageUri"
            app:argType="android.net.Uri"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>