<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="6dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33FFFFFF"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subkey_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="11sp"
            android:textColor="#BBBBBB"
            android:text="@string/usage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textSize="11sp"
            android:textColor="#BBBBBB" />

        <TextView
            android:id="@+id/subkey_algorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#BBBBBB"
            android:text="@string/algorithm" />
    </LinearLayout>

    <TextView
        android:id="@+id/subkey_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="10sp"
        android:layout_marginTop="2dp"
        android:text="@string/fingerprint" />

    <TextView
        android:id="@+id/subkey_meta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="#888888"
        android:layout_marginTop="2dp"
        android:text="@string/meta_info" />

</LinearLayout>
